# parallel-programming-2018

1606-3/morkovkin_as/MPI_Task1/: CMakeLists.txt
1606-3/morkovkin_as/MPI_Task1/src/: main.cpp
1606-3/morkovkin_as/MPI_Task2_27/: CMakeLists.txt  image.cpp  image.hpp  main.cpp  png.cpp
1606-3/morkovkin_as/MPI_Task3_33/: CMakeLists.txt  image.cpp  image.hpp  main.cpp  pixel.cpp  pixel.hpp  tmp.txt
1606-3/morkovkin_as/OpenMP_Task_30/: Parallel_OpenMP.sln
1606-3/morkovkin_as/OpenMP_Task_30/Parallel_OpenMP/: Parallel_OpenMP.vcxproj  Parallel_OpenMP.vcxproj.filters  image.cpp  image.hpp  main.cpp  png.hpp
1606-3/morkovkin_as/OpenMP_Task_30/Parallel_OpenMP/x64/Debug/: vc141.idb
1606-3/morkovkin_as/OpenMP_Task_30/Parallel_OpenMP/x64/Debug/Parallel_OpenMP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Parallel_OpenMP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
1606-3/morkovkin_as/OpenMP_Task_30/Parallel_OpenMP/x64/Release/Parallel_OpenMP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Parallel_OpenMP.lastbuildstate  Parallel_OpenMP.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
1606-3/morkovkin_as/OpenMP_Task_30/x64/Debug/: Parallel_OpenMP.ilk
1606-3/morkovkin_as/OpenMP_Task_30/x64/Release/: Parallel_OpenMP.iobj  Parallel_OpenMP.ipdb
1606-3/morkovkin_as/Sequence_Task_30/: image.cpp  image.hpp  main.cpp  png.cpp
1606-3/morkovkin_as/TBB_Task_30/: CMakeLists.txt
1606-3/morkovkin_as/TBB_Task_30/include/: image.hpp  pixel.hpp
1606-3/morkovkin_as/TBB_Task_30/src/: CMakeLists.txt  image.cpp  main.cpp
1606-3/morkovkin_as/include/: matrix.hpp
